k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-solon-service-service
  namespace: template_project
#  labels:
#    test: test
#    label2: label
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    run: template-solon-service
  sessionAffinity: None
  type: ClusterIP
