k8s/manifest/ingress.yaml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template-solon-service-route
  namespace: template_project
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: template-solon-service-service
                port:
                  number: 9090
